# MidiKraft

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
base/: CMakeLists.txt
base/include/: BankDumpCapability.h  Capability.h  CustomProgramChangeCapability.h  DetailedParametersCapability.h  DiscoverableDevice.h  FindSynthOnMidiNetwork.h  HasBanksCapability.h  LayeredPatchCapability.h  MTSFile.h  MidiController.h  MidiCoroutine.h  Patch.h  SimpleDiscoverableDevice.h  StoredPatchNameCapability.h  Synth.h  SynthParameterDefinition.h  Tag.h
base/src/: Additive.cpp  AutoDetection.cpp  FindSynthOnMidiNetwork.cpp  MTSFile.cpp  MidiController.cpp  MidiRequest.cpp  Patch.cpp  ReadonlySoundExpander.cpp  Synth.cpp
database/: CMakeLists.txt  JsonSerialization.cpp  JsonSerialization.h  PatchDatabase.cpp  PatchDatabase.h  PatchFilter.cpp  PatchFilter.h  PatchListType.h  SqlExpression.cpp  SqlExpression.h
librarian/: AutomaticCategory.cpp  CMakeLists.txt  Category.h  ImportList.cpp  ImportList.h  JsonSchema.cpp  JsonSchema.h  JsonSerialization.cpp  JsonSerialization.h  Librarian.cpp  Librarian.h  PatchHolder.cpp  PatchHolder.h  PatchInterchangeFormat.cpp  PatchList.cpp  PatchList.h  PatchListFill.cpp  PatchListFill.h  SynthBank.cpp  SynthBank.h  SynthHolder.cpp  SynthHolder.h  createResources.cmake
librarian/resources/: automatic_categories.jsonc  mapping_categories.jsonc
tests/: CMakeLists.txt
tests/base/: test_midikraft_base_smoke.cpp
tests/librarian/: TestSynthFixtures.h  test_patch_interchange_format.cpp  test_patch_list.cpp  test_synth_bank.cpp
